[gd_scene load_steps=5 format=3 uid="uid://8p7mcpd5o46e"]

[ext_resource type="Script" uid="uid://d1tlfhjskttv4" path="res://scripts/persistence/prefabs/save_item.gd" id="1_o32js"]
[ext_resource type="Theme" uid="uid://cekoodp7oprwo" path="res://settings/popup_dialog_theme.tres" id="2_01xg4"]
[ext_resource type="Theme" uid="uid://bqtjul82stgbk" path="res://settings/button_theme.tres" id="2_aag40"]
[ext_resource type="Texture2D" uid="uid://chfullbussy1q" path="res://textures/backgrounds/entry_background_ninepatch.png" id="4_4t625"]

[node name="SaveItem" type="MarginContainer"]
offset_right = 384.0
offset_bottom = 27.0
size_flags_horizontal = 3
focus_mode = 2
script = ExtResource("1_o32js")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("4_4t625")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 21
patch_margin_bottom = 12

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save Name"
text_overrun_behavior = 1

[node name="Date" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save Date"
text_overrun_behavior = 1

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
initial_position = 4
size = Vector2i(317, 100)
theme = ExtResource("2_01xg4")
dialog_text = "SAVEFILE_OVERWRITE_CONFIRMATION"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 4
theme = ExtResource("2_01xg4")
dialog_text = "SAVEFILE_DELELTE_CONFIRMATION"

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_aag40")
text = "REWRITE_BUTTON"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_aag40")
text = "DELETE_BUTTON"

[connection signal="confirmed" from="MarginContainer/HBoxContainer/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="confirmed" from="MarginContainer/HBoxContainer/DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_confirmed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
